build_log.txt
cargo :    Compiling rustapi-macros v0.1.0 (C:\Users\tunay\Documents\GitHub\RustAPI\crates\ru
stapi-macros)
At line:1 char:1
+ cargo check -p hello-world 2>&1 | Out-File -Encoding UTF8 build_log.t ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling ru...rustapi-macros):String) [], R 
   emoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    Checking rustapi-core v0.1.0 (C:\Users\tunay\Documents\GitHub\RustAPI\crates\rustapi-core
)
error[E0615]: attempted to take value of method `path` on type `&Attribute`
  --> crates\rustapi-macros\src\lib.rs:91:35
   |
91 |         if let Some(ident) = attr.path.segments.last().map(|s| &s.ident) {
   |                                   ^^^^ method, not a field
   |
help: use parentheses to call the method
   |
91 |         if let Some(ident) = attr.path().segments.last().map(|s| &s.ident) {
   |                                       ++

For more information about this error, try `rustc --explain E0615`.
error: could not compile `rustapi-macros` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: unused import: `self`
   --> crates\rustapi-core\src\extract.rs:378:37
    |
378 | use rustapi_openapi::utoipa_types::{self, openapi};
    |                                     ^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `state`
  --> crates\rustapi-core\src\app.rs:62:27
   |
62 |     pub fn state<S>(self, state: S) -> Self
   |                           ^^^^^ help: if this is intentional, prefix it with an undersco
re: `_state`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> crates\rustapi-core\src\app.rs:160:26
    |
160 |     fn route_with_method(mut self, path: &str, method: http::Method, handler: crate::ha
ndler::BoxedHandler) -> Self {
    |                          ----^^^^
    |                          |
    |                          help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of partially moved value: `self.operation`
   --> crates\rustapi-core\src\handler.rs:335:26
    |
329 |         let tags = if let Some(mut tags) = self.operation.tags {
    |                                -------- value partially moved here
...
335 |         self.operation = self.operation.tags(tags);
    |                          ^^^^^^^^^^^^^^ value used here after partial move
    |
    = note: partial move occurs because value has type `Vec<std::string::String>`, which does
 not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
    |
329 |         let tags = if let Some(ref mut tags) = self.operation.tags {
    |                                +++

For more information about this error, try `rustc --explain E0382`.
warning: `rustapi-core` (lib) generated 3 warnings
error: could not compile `rustapi-core` (lib) due to 1 previous error; 3 warnings emitted
